--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -8,11 +8,12 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        php: [7.3, 7.4, 8.0]
-        illuminate: [6, 7, 8]
+        php: [7.3, 7.4, "8.0", 8.1, 8.2]
+        illuminate: [6, 7, 8, 9]
 
     steps:
       - uses: actions/checkout@v2
 
       - name: "Run tests on PHP: ${{ matrix.php }}, Illuminate: ${{ matrix.illuminate }}"
         run: docker build . --build-arg PHP_VERSION=${{ matrix.php }} --build-arg ILLUMINATE_VERSION=${{ matrix.illuminate }}
+
