--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -8,8 +8,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        php: [7.3, 7.4, "8.0", 8.1, 8.2]
-        illuminate: [6, 7, 8, 9]
+        php: ["8.0", 8.1, 8.2]
+        illuminate: [9]
 
     steps:
       - uses: actions/checkout@v2
