--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -4,7 +4,7 @@ on: [push, pull_request]
 
 jobs:
   build:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       matrix:
@@ -12,7 +12,7 @@ jobs:
         illuminate: [9]
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
 
       - name: "Run tests on PHP: ${{ matrix.php }}, Illuminate: ${{ matrix.illuminate }}"
         run: docker build . --build-arg PHP_VERSION=${{ matrix.php }} --build-arg ILLUMINATE_VERSION=${{ matrix.illuminate }}
