--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -8,8 +8,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        php: ["8.0", 8.1, 8.2]
-        illuminate: [9]
+        php: ["8.0", 8.1, 8.2, 8.3]
+        illuminate: [9, 10, 11]
 
     steps:
       - uses: actions/checkout@v3
