--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,8 @@
         }
     ],
     "require": {
-        "illuminate/support": "^9.0",
-        "illuminate/contracts": "^9.0",
+        "illuminate/support": "^9.0|^10.0|^11.0",
+        "illuminate/contracts": "^9.0|^10.0|^11.0",
         "synergitech/cronitor": "^0.0.1"
     },
     "autoload": {
