--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -8,8 +8,22 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        php: ["8.0", 8.1, 8.2, 8.3]
-        illuminate: [9, 10, 11]
+        include:
+          # Laravel 9
+          - php: '8.0'
+            illuminate: 9
+          - php: '8.1'
+            illuminate: 9
+          # Laravel 10
+          - php: '8.1'
+            illuminate: 10
+          - php: '8.2'
+            illuminate: 10
+          # Laravel 11
+          - php: '8.2'
+            illuminate: 11
+          - php: '8.3'
+            illuminate: 11
 
     steps:
       - uses: actions/checkout@v3
