--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -8,25 +8,21 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        php: ['8.0', '8.1', '8.2', '8.3']
+        php: [8.0, 8.1, 8.2, 8.3]
         illuminate: [9, 10, 11]
         exclude:
           # Exclude incompatible PHP versions for Laravel 9
-          - php: '8.2'
-            illuminate: 9
-          - php: '8.3'
+          - php: 8.3
             illuminate: 9
 
           # Exclude incompatible PHP versions for Laravel 10
-          - php: '8.0'
-            illuminate: 10
-          - php: '8.3'
+          - php: 8.0
             illuminate: 10
 
           # Exclude incompatible PHP versions for Laravel 11
-          - php: '8.0'
+          - php: 8.0
             illuminate: 11
-          - php: '8.1'
+          - php: 8.1
             illuminate: 11
 
     steps:
