--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -8,7 +8,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        php: [8.0, 8.1, 8.2, 8.3]
+        php: ["8.0", 8.1, 8.2, 8.3]
         illuminate: [9, 10, 11]
         exclude:
           # Exclude incompatible PHP versions for Laravel 9
@@ -16,11 +16,11 @@ jobs:
             illuminate: 9
 
           # Exclude incompatible PHP versions for Laravel 10
-          - php: 8.0
+          - php: "8.0"
             illuminate: 10
 
           # Exclude incompatible PHP versions for Laravel 11
-          - php: 8.0
+          - php: "8.0"
             illuminate: 11
           - php: 8.1
             illuminate: 11
