--- a/composer.json
+++ b/composer.json
@@ -32,6 +32,6 @@
         "phpstan/phpstan": "^0.12.84",
         "php-parallel-lint/php-parallel-lint": "^1.3",
         "nunomaduro/larastan": "^0.7.4",
-        "orchestra/testbench": "^7.0"
+        "orchestra/testbench": "^7.0|^8.0|^9.0"
     }
 }
