--- a/composer.json
+++ b/composer.json
@@ -26,12 +26,17 @@
             ]
         }
     },
+    "config": {
+        "allow-plugins": {
+            "phpstan/extension-installer": true,
+        }
+    },
     "require-dev": {
         "symplify/easy-coding-standard": "^9.2",
         "phpunit/phpunit": "^9.5",
-        "phpstan/phpstan": "^0.12.84",
+        "phpstan/extension-installer": "^1.1",
         "php-parallel-lint/php-parallel-lint": "^1.3",
-        "nunomaduro/larastan": "^0.7.4",
+        "larastan/larastan": "^2.9",
         "orchestra/testbench": "^7.0|^8.0|^9.0"
     }
 }
