--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,7 @@
     },
     "config": {
         "allow-plugins": {
-            "phpstan/extension-installer": true,
+            "phpstan/extension-installer": true
         }
     },
     "require-dev": {
