--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,7 @@
     },
     "require-dev": {
         "symplify/easy-coding-standard": "^9.2",
-        "phpunit/phpunit": "^9.5",
+        "phpunit/phpunit": "^9.5|^10.0",
         "phpstan/extension-installer": "^1.1",
         "php-parallel-lint/php-parallel-lint": "^1.3",
         "larastan/larastan": "^2.9",
