--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -8,11 +8,25 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        php: ["8.0", 8.1, 8.2]
-        illuminate: [9]
+        php: ["8.0", 8.1, 8.2, 8.3]
+        illuminate: [9, 10, 11]
+        exclude:
+          # Exclude incompatible PHP versions for Laravel 9
+          - php: 8.3
+            illuminate: 9
+
+          # Exclude incompatible PHP versions for Laravel 10
+          - php: "8.0"
+            illuminate: 10
+
+          # Exclude incompatible PHP versions for Laravel 11
+          - php: "8.0"
+            illuminate: 11
+          - php: 8.1
+            illuminate: 11
 
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
       - name: "Run tests on PHP: ${{ matrix.php }}, Illuminate: ${{ matrix.illuminate }}"
         run: docker build . --build-arg PHP_VERSION=${{ matrix.php }} --build-arg ILLUMINATE_VERSION=${{ matrix.illuminate }}
